# peace

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  index.html  osv-scanner.toml  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.do/: app.yaml
.github/: labeler.yml
.github/workflows/: clippy.yaml  deploy.yaml  osv.yaml  pr-labeling.yml  test.yaml
assets/: avatar.afdesign  lily-of-the-valley.afdesign  manifest.json  serviceworker.js
end2end/: package-lock.json
migrations/: favoritequotes.mongodb.js
specifications/: peacelily.toml.template
specifications/pages/: homepage.toml
src/: app.rs  config.rs  lib.rs  main.rs  placeholders.rs  router.rs  sharedstate.rs  sidebar.rs  specifications.rs
src/components/: accessibility.rs  article.rs  autoscale.rs  clipboard.rs  code.rs  favoritequotes.rs  footer.rs  input.rs  mod.rs  navigator.rs  themes.rs
src/mongodb_models/: mod.rs
src/server/: config.rs  mod.rs  models.rs
src/views/: ask.rs  contact.rs  homepage.rs  mod.rs  notfound.rs  ramblings.rs  stats.rs  wip.rs  work.rs
style/: main.sass  tailwind.css  terminaux.sass
