[package]
name = "lilyswebsite"
description = "Lily's personal website"
authors = ["Lily Ana Valley <mslilyvalley@icloud.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
egui            = "0.31.0"  # 'Dear IMGUI'-like graphical UI library.
egui_extras     = { version = "0.31.0", features = ["all_loaders"] }
#^^^^^^^^^^     EGUI image loading implementations in addition with `image` library.
egui_router     = "0.4.0"   # Multi-view application router.
egui_inbox      = { version = "0.8.0", features = ["type_inbox"] }
#^^^^^^^^^      Message system.
egui_flex       = "0.3.0"   # Flexbox for EGUI.
egui-phosphor   = { version = "0.9.0", features = ["regular", "fill"] }
#^^^^^^^^^^^^   Phosphor Icons implementation for EGUI.
eframe          = "0.31.0"  # Native & Web EGUI windowing system.
image           = { version = "0.25.5", features = ["jpeg", "png"] }
#^^^^           Image (en/de)coding library.
log             = "0.4.25"  # Abstract logging facilities.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures    = "0.4"
web-sys                 = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm
overflow-checks = true # see: https://github.com/lilyanavalley/peace/security/dependabot/1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
