[package]
name = "peace"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ! REMOVE
# TODO: Remove and keep out of commit. Dirty work.
##### LINKER FIX
# See: https://github.com/leptos-rs/leptos/issues/3148
[target.nightly-aarch64-apple-darwin]
linker = "rust-lld"
# NOTE: `rustdoc` doesn't currently respect the `linker` setting — keep an eye
# on this issue: https://github.com/rust-lang/rust/issues/125657
rustdocflags = ["-Clink-arg=-fuse-ld=lld"]

[target.nightly-x86_64-apple-darwin]
linker = "rust-lld"
rustdocflags = ["-Clink-arg=-fuse-ld=lld"]
##### END LINKER FIX

[dependencies]
leptos = { version = "0.7.7", features = ["nightly"] }
leptos_meta = { version = "0.7.7", features = ["ssr"] }
leptos_actix = { version = "0.7.7", optional = true }
leptos_router = { version = "0.7.7" }
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.10.2", optional = true, features = ["macros"] }
mongodb = { version = "3.2.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
http = { version = "1.0.0", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
comrak = { version = "0.36.0", optional = true }
serde = "1.0.219"
phosphor-leptos = "0.7.0"

[features]
csr = ["leptos/csr"]
hydrate = [
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "leptos/hydrate"
]
ssr = [
  "dep:comrak",
  "dep:mongodb",
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "peace"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.sass"
tailwind-input-file = "style/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
