[package]
name = "peace"
authors = ["Lily Ana Valley <mslilyvalley@icloud.com>"]
version = "0.8.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# # ! REMOVE
# # TODO: Remove and keep out of commit. Dirty work.
# ##### LINKER FIX
# # See: https://github.com/leptos-rs/leptos/issues/3148
# [target.nightly-aarch64-apple-darwin]
# linker = "rust-lld"
# # NOTE: `rustdoc` doesn't currently respect the `linker` setting — keep an eye
# # on this issue: https://github.com/rust-lang/rust/issues/125657
# rustdocflags = ["-Clink-arg=-fuse-ld=lld"]

# [target.nightly-x86_64-apple-darwin]
# linker = "rust-lld"
# rustdocflags = ["-Clink-arg=-fuse-ld=lld"]
# ##### END LINKER FIX

[dependencies]
leptos = { version = "0.8.10", features = ["nightly"] }
leptos_meta = { version = "0.8.2", features = ["ssr"] }
leptos_actix = { version = "0.8.2", optional = true }
leptos_router = { version = "0.8.2" }
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.10.2", optional = true, features = ["macros", "secure-cookies"] }
mongodb = { version = "^3.2.2", optional = true, features = ["dns-resolver"]}
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-console-logger = "0.1.1"
log = "^0.4"
http = { version = "1.3.1", optional = true }
wasm-bindgen = { version = "0.2.104", optional = true }
comrak = { version = "^0.43.0" }
serde = "^1.0"
phosphor-leptos = "0.8.0"
webauthn-rs = { version = "^0.5.1", optional = true }
chrono = { version = "^0.4.40", optional = true }
leptos_hotkeys = "0.2.2"
actix-web-grants = { version = "^4.1", optional = true }
actix-web-httpauth = { version = "^0.8", optional = true }
jsonwebtoken = { version = "^10.3", features = ["rust_crypto"], optional = true }
web-sys = { version = "*", features = ["Clipboard", "Navigator", "Window"] }

# ? Fix for: https://osv.dev/vulnerability/RUSTSEC-2024-0370
proc-macro-error = { version = "^2.0", package = "proc-macro-error2" }
# ? Fix for: https://osv.dev/list?q=RUSTSEC-2024-0320
yaml-rust = { version = "^0.10", package = "yaml-rust2" }


[features]
default = ["ssr", "hydrate"]
csr = ["leptos/csr"]
hydrate = [
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "leptos/hydrate"
]
ssr = [
  # "dep:comrak",
  "dep:jsonwebtoken",
  "dep:mongodb",
  "dep:webauthn-rs",
  "dep:chrono",
  "dep:actix-web-grants",
  "dep:actix-web-httpauth",
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
wip = []

[profile.wasm-release]
inherits = "release"
# opt-level = 'z'
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "peace"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.sass"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
